--- a/predictor_model.ipynb
+++ b/predictor_model.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7Wlh8TND6hXut7u1K61H3",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOSTX5Um1dAJSMB5lQijEiZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +33,7 @@
         "colab": {}
       },
       "source": [
-        "# TSLA Price Prediction using LSTM using the closing prices in 2020 so far..."
+        "# TSLA Price Prediction implemented using LSTM by utilizing its closing prices in 2020 so far..."
       ],
       "execution_count": null,
       "outputs": []
@@ -42,11 +43,7 @@
       "metadata": {
         "id": "xNeRdD_CBgri",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
-        },
-        "outputId": "bc3dad10-d20a-4bcb-deec-bb0b2b227b22"
+        "colab": {}
       },
       "source": [
         "import math\n",
@@ -59,18 +56,8 @@
         "import matplotlib.pyplot as plt\n",
         "plt.style.use('fivethirtyeight')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/pandas_datareader/compat/__init__.py:7: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  from pandas.util.testing import assert_frame_equal\n",
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -91,30 +78,13 @@
       "metadata": {
         "id": "ERtAnR1YDAQj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "1b3d8223-8f84-44dc-eb6f-fc8c3f0d7e2c"
+        "colab": {}
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(140, 6)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
